--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: '3.8'
 
 services:
   agenda-gol:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.prod
     ports:
       - "3000:3000"
-    volumes:
-      - .:/app
-      - /app/node_modules
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    stdin_open: true
-    tty: true
+    # volumes:
+    #   - .:/app
+    #   - /app/node_modules
+    # environment:
+    #   - CHOKIDAR_USEPOLLING=true
+    # stdin_open: true
+    # tty: true
