--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,26 +3,30 @@ FROM node:18-alpine AS build
 
 WORKDIR /app
 COPY package*.json ./
-RUN npm ci --only=production
-
+RUN npm ci
 COPY . .
 RUN npm run build
 
-
+# Etapa de producción
 FROM nginx:alpine
 
 COPY --from=build /app/build /usr/share/nginx/html
 
-
+# Configuración de Nginx para React Router y archivos estáticos
 RUN echo 'server { \
-    listen 3000; \
-    location / { \
+    listen 80; \
+    location /Prueba/ { \
         root /usr/share/nginx/html; \
         index index.html index.htm; \
-        try_files $uri $uri/ /index.html; \
+        try_files $uri $uri/ /Prueba/index.html; \
+    } \
+    location /static/ { \
+        alias /usr/share/nginx/html/static/; \
+        expires 1y; \
+        add_header Cache-Control "public"; \
     } \
 }' > /etc/nginx/conf.d/default.conf
 
-EXPOSE 3000
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
