--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,29 +1,25 @@
 # Etapa de construcción
-FROM node:18-alpine AS build
+FROM node:20-alpine AS build
 
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
+
 COPY . .
 RUN npm run build
 
-# Etapa de producción
+
 FROM nginx:alpine
 
 COPY --from=build /app/build /usr/share/nginx/html
 
-# Configuración de Nginx para React Router y archivos estáticos
+
 RUN echo 'server { \
     listen 80; \
-    location /Prueba/ { \
+    location / { \
         root /usr/share/nginx/html; \
         index index.html index.htm; \
-        try_files $uri $uri/ /Prueba/index.html; \
-    } \
-    location /static/ { \
-        alias /usr/share/nginx/html/static/; \
-        expires 1y; \
-        add_header Cache-Control "public"; \
+        try_files $uri $uri/ /index.html; \
     } \
 }' > /etc/nginx/conf.d/default.conf
 
