--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0"
   }
 }
